fix: ai chat issues
